--- a/isodir/boot/grub/grub.cfg
+++ b/isodir/boot/grub/grub.cfg
@@ -1,3 +1,3 @@
-menuentry "piriquitOS(i386)" {
-    multiboot /boot/piriquitOS-i386.bin
+menuentry "wolfieOS(i386)" {
+    multiboot2 /boot/wolfieOS.bin
 }
